# OsBridgeLCCA

./: CONTRIBUTING.md  README.md  environment.yml  install.bat  install.sh  pyproject.toml  requirements.txt
backend/api/models/: database.py
backend/api/routes/: cost_calculations.py
cicd/github_actions/: main.yml
core/: bridge_lcc.py  visualization.py
data/databases/: emissions_factors.db  user_projects.db  vehicle_costs.db
desktop_app/: app.py
desktop_app/logic/: controller.py
desktop_app/ui/: results_view.py
desktop_app/ui/themes/: dark_mode.qss  resources.qrc
osbridgelcca.egg-info/: PKG-INFO  SOURCES.txt
scripts/: verify_installation.py
src/osbridgelcca.egg-info/: SOURCES.txt
src/osbridgelcca/core/: bridge_lcc.py  cost_component.py  cost_components.py
src/osbridgelcca/desktop_app/: app.py
src/osbridgelcca/desktop_app/logic/: calculations.py  controller.py  database_connector.py
src/osbridgelcca/desktop_app/ui/: input_form.py  main_window.py
src/osbridgelcca/desktop_app/ui/themes/: light_mode.qss
tests/integration_tests/: test_api.py  test_ui.py
tests/unit_tests/: conftest.py  test_calculations.py  test_cost_components.py  test_visualization.py
web_app/src/components/: InputForm.jsx
web_app/src/services/: api.js
