[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OsBridgeLCCA"
version = "0.1.0"
description = "Life Cycle Cost Assessment tool for bridges"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    # Core
    "numpy",
    "pandas",
    "scipy",

    # Backend (API)
    "flask",
    "flask-restful",
    "flask-cors",
    "sqlite3",

    # Desktop (GUI)
    "PyQt6",
    "PyQt6-WebEngine",

    # Visualization
    "plotly",
    "matplotlib",

    # Report generation
    "pylatex",
    "openpyxl",

    # Testing
    "pytest",
    "pytest-qt",
    "pytest-cov",
    "requests",

    # Environment configuration
    "python-dotenv"
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "black",    # Code formatting
    "flake8",   # Linting
    "mypy",     # Type checking
    "pre-commit"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[project.scripts]
verify_installation = "scripts.verify_installation:main"
